<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/email_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            app:title="@string/home" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurfaceVariant">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wallpaper"
                        android:layout_width="match_parent"
                        android:layout_height="156dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Oblatum"
                        android:textColor="?attr/colorOnPrimaryContainer"
                        android:textSize="28sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="A great icon pack app with hundreds of cool icons."
                        android:textColor="?attr/colorOnPrimaryContainer"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="?attr/colorSurfaceVariant">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:text="@string/icons"
                            android:textColor="?attr/colorOnPrimaryContainer"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/category_outline"
                            app:drawableTint="?attr/colorOnPrimaryContainer" />

                        <TextView
                            android:id="@+id/icon_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/colorOnPrimaryContainer"
                            android:textSize="45sp"
                            tools:text="4096" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="?attr/colorSurfaceVariant">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:text="@string/requests"
                            android:textColor="?attr/colorOnPrimaryContainer"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/request_outline"
                            app:drawableTint="?attr/colorOnPrimaryContainer" />

                        <TextView
                            android:id="@+id/install_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            tools:text="@string/install_app" />

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/themed_process"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:trackColor="?attr/colorPrimaryInverse"
                            tools:max="100"
                            tools:progress="70" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/themed_count"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="30dp"
                                android:layout_weight="1"
                                tools:text="@string/themed_app" />

                            <TextView
                                android:id="@+id/missed_count"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                tools:text="@string/missed_app" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>